<resources>
    <string name="app_name">Social Force</string>
    <string name="title_welcome" formatted="false">Page %d of 4</string>
    <string name="subtitle_welcome">Social Force Introduction</string>
    <string name="subtitle_rating" formatted="false">Step %d of 5</string>
    <string name="title_people_rater">People Rater</string>
    <string name="title_people_rater_tool">Rate Contacts</string>
    <string name="title_people_category_tool">Categorize Contacts</string>
    <string name="title_my_network">My Network</string>
    <string name="placeholder_rate">Rate&#8230;</string>
	<string name="action_schedule">Schedule</string>
	<string name="action_continue">Continue</string>
	<string name="action_yes">Yes</string>
	<string name="action_no">No</string>
	<string name="action_rate">Rate</string>
	<string name="action_rate_contacts">Rate Contacts</string>
	<string name="action_schedule_again">Yes, schedule again</string>
	<string name="action_plan_activity">No, plan new activity</string>
	<string name="subtitle_main">Pinch to zoom, tap a friend</string>
    <string-array name="contact_roles">
        <item>Very Positive</item>
        <item>Positive</item>
        <item>Neutral or Don\'t Know</item>
        <item>Negative</item>
        <item>Very Negative</item>
    </string-array>
    <string name="toast_practical" formatted="false">%s provides practical support.</string>
    <string name="toast_no_practical" formatted="false">%s does not provide practical support.</string>
    <string name="toast_emotional" formatted="false">%s provides emotional support.</string>
    <string name="toast_no_emotional" formatted="false">%s does not provide emotional support.</string>
    <string name="toast_advice" formatted="false">%s provides advice and information.</string>
    <string name="toast_no_advice" formatted="false">%s does not provide advice and information.</string>
    <string name="toast_companionship" formatted="false">%s provides companionship.</string>
    <string name="toast_no_companionship" formatted="false">%s does not provide companionship.</string>
    <string-array name="positive_activities">
        <item>Meet up &amp; hang out.</item>
        <item>Call a friend.</item>
        <item>Text (SMS) a friend.</item>
    </string-array>
    <string-array name="meetup_activities">
        <item>Take a walk.</item>
        <item>Grab coffee.</item>
        <item>Share a meal.</item>
        <item>See a movie.</item>
    </string-array>
    <string name="button_lonely">I am lonely.</string>
    <string name="button_bored">I am bored.</string>
    <string name="button_advice">I need advice.</string>
    <string name="button_help">I need help.</string>
    <string name="button_happy">I am happy.</string>
    <string name="title_calendar_error">Scheduling Not Available</string>
    <string name="message_calendar_error">Calendar scheduling is only available on Android 4.0 and newer devices.</string>
    <string name="activity_other">Other activity&#8230;</string>
    <string name="action_rating">Rate Your Contacts</string>
    <string name="action_network">Build Your Network</string>
    <string name="title_network">Build your network</string>
    <string name="title_network_tricks">Tips &amp; Tricks</string>
    <string name="subtitle_network_tricks">For Building Your Network</string>
    <string name="title_network_meet">Meet New People</string>
    <string name="title_network_recommendation">Recommendation</string>
    <string name="tips_intro">Good news: you can create a better, more supportive circle of friends for your self.\n\nSelect a step below to proceed.</string>
    <string name="title_be_friendly">Be Friendly</string>
    <string name="instructions_review">Use this sliding scale to rate your experience of the activity you scheduled. Remember to rate what the activity was like WITH THAT PERSON.\n\nBy ""terrible"", we mean\n\n&#8226; you didn\'t interact at all with the person, kind of like you were standing together in the same space but not talking\n\n&#8226; the person you were with was rude\n\n&#8226; doing the activity with this person lowered your mood\n\n&#8226; you most likely will not interact with this person in this way again.\n\nBy "great", we mean\n\n&#8226; your interaction with the person you were with was easy - you didn’t even have to work at it\n\n&#8226; the person you were with was easy to get along with\n\n&#8226; doing this activity with this person really boosted your mood\n\n&#8226; you will most likely do this again with this same person</string>
    <string name="title_review">Please rate your experience!</string>
    <string name="title_make_time">What could you do this week?</string>
    <string name="title_select_activity">Select an activity.</string>
    <string name="title_new_activity">Create new activity.</string>
    <string name="title_schedule">Schedule Activity</string>
    <string name="instruction_new_activity">Please enter a new activity.</string>
    <string name="hint_new_activity">Your new activity&#8320;</string>
    <string name="title_select_supporter">Select a supporter.</string>
    <string name="network_step_one">Step 1: Meet new people.</string>
    <string name="network_step_one_content">The easiest way to meet people is to do something you like doing in the company of others.\n\nSince the main focus is the activity you are doing, not just meeting others, there will be less pressure on you than in a setting where the whole purpose is to meet people. That sounds just plain stressful!\n\nEven if you don\'t find anyone in particular that you enjoy, you will still have been doing something pleasant, something you like, and you won\'t feel like you wasted your time.</string>
    <string name="network_step_one_a_content">Join a club or Meetup group.\n\nThere are tons of groups in your area, doing a lot of the things to do!</string>
    <string name="network_step_two">Step 2: Be friendly.</string>
    <string name="network_step_two_content">[Friendly content goes here!]</string>
    <string name="network_step_three">Step 3: Plan activities.</string>
    <string name="question_satisfied">Are you satisfied with your network?</string>
    <string name="label_emotional_support">Emotional Support</string>
    <string name="label_practical_support">Practical Support</string>
    <string name="label_companionship">Companionship</string>
    <string name="label_advice">Advice</string>
    <string name="suffix_via_social_force">(via Social Force for Intellicare)</string>
    <string name="note_message_event" formatted="false">%s - How did it go?</string>
    <string name="message_event_check" formatted="false">Did you do this with %s?</string>
    <string name="title_try_again">Would you like to try again?</string>
    <string-array name="actions_event">
        <item>Yes, try this again.</item>
        <item>No, plan a new activity.</item>
        <item>No, take me home.</item>
    </string-array>
    <string name="title_thanks_review">Thanks for the feedback!</string>
    <string name="message_thanks_review">Would you like to do it again?</string>
    <string name="label_terrible">Terrible</string>
    <string name="label_great">Great</string>
    <string name="label_okay">Okay</string>
    <string name="title_settings">Settings</string>
    <string name="label_contact_count" formatted="false">%s (%d calls &amp; texts)</string>
    <string name="label_contact_count_single" formatted="false">%s (1 call or text)</string>
    <string name="title_no_contacts">No Contacts Found</string>
    <string name="message_no_contacts">Social Force uses your contacts and communication logs to highlight your supporters.\n\nPlease restart the app once you\'ve added your contacts to your device.</string>
    <string name="title_no_contacts_comms">No Contacts Found</string>
    <string name="message_no_contacts_comms">Social Force uses your contacts to highlight supporters.\n\nPlease add contact records for people you\'ve called or texted.</string>
    <string name="label_no_phone">(No phone number found.)</string>
    <string name="title_no_positive_contacts">No positive supporters?</string>
    <string name="message_no_positive_contacts">Let\'s work together to BUILD and STRENGTHEN your supports!</string>
    <string name="title_need_rater_help">Need More Help?</string>
    <string name="message_need_rater_help">If you\'re finding it hard to rate people, consider the following questions:\n\nDo I walk away from time with this person feeling happy? Understood? Valued?\n\nDo I walk away from time with this person feeling spent? Used? Unsatisfied?\n\nHow does interacting with this person change my mood - up or down?\n\nHow does interacting with this person change how I feel about myself?</string>
    <string name="title_rater_categories">Support Categories</string>
    <string name="message_rater_categories">Practical Support: Who will drive you to the hospital? Lend you money?\n\nAdvice: Who do you go to for help when you don\'t know how to do something? When you don\'t feel well? When you need help navigating a tricky situation?\n\nCompanionship: Who do you walk around a park with? Who would spend a quiet afternoon with you? Who shares your tears and your joys?\n\nEmotional Support: Who do you go to for encouragement? understanding? to share your feelings? to help lift your mood?</string>
    <string name="title_network_meetup">Join a Club or Meetup Group</string>
    <string name="message_network_meetup">There are tons of groups in your area, doing a lot of the things you like to do! If meetup.com isn\'t right for you, there are other networks out there - find them and look for what interests you.</string>
    <string name="title_network_volunteer">Volunteer</string>
    <string name="message_network_volunteer">Volunteering is a great way to do something you think is worthwhile, while giving you a chance to meet people with similar interests and hearts.</string>
    <string name="title_network_smile">Smile</string>
    <string name="message_network_smile">Even if you\'re feeling down, depressed, or uncomfortable, putting a smile on your face biologically signals to others that you are open. Friendliness attracts friends! Smiles can open you up to having something to smile about!</string>
    <string name="title_network_yes">Say Yes</string>
    <string name="message_network_yes">Pick a day, a week, or any time period and vow to say "yes"" to every invitation, opportunity, and date. If no invitations come along, pick another date! Give yourself plenty of chances to interact with new people.</string>
    <string name="title_network_missing">Are You Missing Anything?</string>
    <string name="message_network_missing">Go back through your contacts - are there people in the "neutral" or ""don\'t know" category that you want to know better? Is there anyone missing or anyone you just met that might make a potential friend?</string>
    <string-array name="friendly_urls">
        <item>file:///android_asset/www/friendly_0.html</item>
        <item>file:///android_asset/www/friendly_1.html</item>
        <item>file:///android_asset/www/friendly_2.html</item>
    </string-array>
    <string-array name="friendly_titles">
        <item>How to Start a Conversation</item>
        <item>How to Listen Actively</item>
        <item>How to Look and Speak Confidently</item>
    </string-array>
</resources>