<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rater_list"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="8dp"
	android:orientation="vertical">
    <TextView android:text="@string/tips_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>
    <View android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button android:id="@+id/step_one"
        android:text="@string/network_step_one"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button android:id="@+id/step_two"
        android:text="@string/network_step_two"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button android:id="@+id/step_three"
        android:text="@string/network_step_three"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout> 
