<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="#e0e0e0"    
    android:padding="4dp">
    <TextView android:id="@+id/network_visualization"
        android:text="VisUaLIZation HeRe..."
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" />
	<RadioGroup android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <RadioButton android:id="@+id/button_lonely"
	        android:layout_height="48dp"
	        android:layout_width="match_parent"
	        android:textSize="18sp"
	        android:layout_margin="2dp"
	        android:background="@drawable/card_background"
	        android:drawableRight="@drawable/ic_action_emo_cry"
	        android:text="@string/button_lonely" />
	    <RadioButton android:id="@+id/button_bored"
	        android:layout_height="48dp"
	        android:layout_width="match_parent"
	        android:textSize="18sp"
	        android:layout_margin="2dp"
	        android:background="@drawable/card_background"
	        android:drawableRight="@drawable/ic_action_emo_err"
	        android:text="@string/button_bored" />
	    <RadioButton android:id="@+id/button_help"
	        android:layout_height="48dp"
	        android:textSize="18sp"
	        android:layout_margin="2dp"
	        android:background="@drawable/card_background"
	        android:drawableRight="@drawable/ic_action_emo_wonder"
	        android:layout_width="match_parent"
	        android:text="@string/button_help" />
	    <RadioButton android:id="@+id/button_advice"
	        android:layout_height="48dp"
	        android:textSize="18sp"
	        android:layout_margin="2dp"
	        android:background="@drawable/card_background"
	        android:drawableRight="@drawable/ic_action_emo_shame"
	        android:layout_width="match_parent"
	        android:text="@string/button_advice" />
	    <RadioButton android:id="@+id/button_happy"
	        android:layout_height="48dp"
	        android:textSize="18sp"
	        android:layout_margin="2dp"
	        android:background="@drawable/card_background"
	        android:drawableRight="@drawable/ic_action_emo_basic"
	        android:layout_width="match_parent"
	        android:text="@string/button_happy" />
	</RadioGroup>
</LinearLayout>
