<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<ListView android:id="@+id/rater_list"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" 
	    android:background="#ffffff"/> 
	<View android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="#808080" />
	<LinearLayout android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="4dp"
	    android:layout_marginRight="4dp"
	    android:layout_marginTop="4dp"
	    android:layout_marginBottom="2dp">
	    <ImageView android:id="@+id/legend_practical_item"
	        android:layout_width="24dp"
		    android:layout_height="24dp"
		    android:gravity="center_vertical" 
		    android:layout_marginLeft="4dp"
		    android:layout_marginRight="4dp" />
	    <TextView android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingTop="2dp"
	        android:text="@string/label_practical_support"
	        android:textSize="14sp" />
	    <ImageView android:id="@+id/legend_advice_item"
	        android:layout_width="24dp"
		    android:layout_height="24dp"
		    android:gravity="center_vertical" 
		    android:layout_marginLeft="4dp"
		    android:layout_marginRight="4dp" />
	    <TextView android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingTop="2dp"
	        android:text="@string/label_advice"
	        android:textSize="14sp" />
   	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="4dp"
	    android:layout_marginRight="4dp"
	    android:layout_marginTop="2dp"
	    android:layout_marginBottom="4dp">
	    <ImageView android:id="@+id/legend_companion_item"
	        android:layout_width="24dp"
		    android:layout_height="24dp"
		    android:gravity="center_vertical" 
		    android:layout_marginLeft="4dp"
		    android:layout_marginRight="4dp" />
	    <TextView android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingTop="2dp"
	        android:text="@string/label_companionship"
	        android:textSize="14sp" />
	    <ImageView android:id="@+id/legend_emotional_item"
	        android:layout_width="24dp"
		    android:layout_height="24dp"
		    android:gravity="center_vertical" 
		    android:layout_marginLeft="4dp"
		    android:layout_marginRight="4dp" />
	    <TextView android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:paddingTop="2dp"
	        android:text="@string/label_emotional_support"
	        android:textSize="14sp" />
   	</LinearLayout>
</LinearLayout>    
